--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_VERIFIED_SMART_CONTRACT=0xF928d6285B8a4f9ac5A640ae598D7399C331cea7
+REACT_APP_MARKETPLACE_URL=https://marketplace.roofstockonchain.com
