--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_VERIFIED_SMART_CONTRACT=0xF928d6285B8a4f9ac5A640ae598D7399C331cea7
 REACT_APP_MARKETPLACE_URL=https://marketplace.roofstockonchain.com
+REACT_APP_FAQS_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain/faqs/buying
+REACT_APP_HOW_IT_WORKS_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain/guides/how-it-works
