--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ REACT_APP_MARKETPLACE_URL=https://marketplace.roofstockonchain.com
 REACT_APP_FAQS_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain/faqs/buying
 REACT_APP_HOW_IT_WORKS_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain/guides/how-it-works
 REACT_APP_LEARN_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain
+REACT_APP_RS_ON_CHAIN_TWITTER_URL=https://twitter.com/rsonchain
