--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -24,9 +24,12 @@ jobs:
           name: github-pages
           path: build
   DeployDevelopment:
-    name: Deploy to Development (Angular)
+    name: Deploy
     runs-on: ubuntu-latest
     needs: [Build]
+    permissions:
+      pages: write
+      id-token: write
     environment:
       name: 'New Roofstock onChain'
       url: 'https://new.roofstockonchain.com'
