--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -19,9 +19,8 @@ jobs:
       - name: Build
         run: npm run build
       - name: Upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-pages-artifact@v1
         with:
-          name: github-pages
           path: build
   DeployDevelopment:
     name: Deploy
