--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "roc-client",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "prettier": "prettier --check .",
+    "prettier:fix": "prettier --write .",
+    "postbuild": "react-snap"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -27,13 +36,10 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prettier": "prettier --check .",
-    "prettier:fix": "prettier --write ."
+  "devDependencies": {
+    "@types/lodash": "^4.14.195",
+    "prettier": "2.8.8",
+    "react-snap": "^1.23.0"
   },
   "eslintConfig": {
     "extends": [
@@ -52,9 +58,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.195",
-    "prettier": "2.8.8"
   }
 }
