--- a/package.json
+++ b/package.json
@@ -21,25 +21,23 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "dayjs": "^1.11.8",
     "lodash": "^4.17.21",
+    "prettier": "2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-snap": "^1.23.0",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.195",
-    "prettier": "2.8.8",
-    "react-snap": "^1.23.0"
   },
   "eslintConfig": {
     "extends": [
