--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "prettier --check .",
-    "prettier:fix": "prettier --write .",
-    "postbuild": "react-snap"
+    "prettier:fix": "prettier --write ."
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -34,7 +33,6 @@
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "react-snap": "^1.23.0",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
