--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_FAQS_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-on
 REACT_APP_HOW_IT_WORKS_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain/guides/how-it-works
 REACT_APP_LEARN_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain
 REACT_APP_RS_ON_CHAIN_TWITTER_URL=https://twitter.com/rsonchain
+REACT_APP_WALLET_CONNECT_PROJECT_ID=49329618af3867dfc346d91a46d67669
