--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@web3modal/ethereum": "^2.4.6",
+    "@web3modal/react": "^2.4.6",
     "dayjs": "^1.11.8",
     "lodash": "^4.17.21",
     "prettier": "2.8.8",
@@ -35,6 +37,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
+    "viem": "^1.0.7",
+    "wagmi": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
