--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: '18'
       - name: Install Packages
-        run: npm ci
+        run: npm install --legacy-peer-deps
       - name: Build
         run: npm run build
       - name: Test
