--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write ."
@@ -16,14 +15,12 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.13.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.195",
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@web3modal/ethereum": "^2.4.6",
+    "@web3modal/react": "^2.4.6",
     "dayjs": "^1.11.8",
     "lodash": "^4.17.21",
     "prettier": "2.8.8",
@@ -35,6 +32,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
+    "viem": "^1.0.7",
+    "wagmi": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
