Add mint membership token button

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_HOW_IT_WORKS_URL=https://roofstock-onchain.gitbook.io/learn-about-roof
 REACT_APP_LEARN_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain
 REACT_APP_RS_ON_CHAIN_TWITTER_URL=https://twitter.com/rsonchain
 REACT_APP_WALLET_CONNECT_PROJECT_ID=49329618af3867dfc346d91a46d67669
+REACT_APP_ROOFSTOCK_MEMBERSHIP_CONTRACT_ADDRESS=0x55a1B527433aF12CCff3a1d15EAA770c249055B2
