--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-REACT_APP_VERIFIED_SMART_CONTRACT=0xF928d6285B8a4f9ac5A640ae598D7399C331cea7
-REACT_APP_MARKETPLACE_URL=https://marketplace.roofstockonchain.com
-REACT_APP_FAQS_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain/faqs/buying
-REACT_APP_HOW_IT_WORKS_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain/guides/how-it-works
-REACT_APP_LEARN_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain
-REACT_APP_RS_ON_CHAIN_TWITTER_URL=https://twitter.com/rsonchain
-REACT_APP_WALLET_CONNECT_PROJECT_ID=49329618af3867dfc346d91a46d67669
-REACT_APP_ROOFSTOCK_MEMBERSHIP_CONTRACT_ADDRESS=0x55a1B527433aF12CCff3a1d15EAA770c249055B2
+GATSBY_VERIFIED_SMART_CONTRACT=0xF928d6285B8a4f9ac5A640ae598D7399C331cea7
+GATSBY_MARKETPLACE_URL=https://marketplace.roofstockonchain.com
+GATSBY_FAQS_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain/faqs/buying
+GATSBY_HOW_IT_WORKS_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain/guides/how-it-works
+GATSBY_LEARN_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain
+GATSBY_RS_ON_CHAIN_TWITTER_URL=https://twitter.com/rsonchain
+GATSBY_WALLET_CONNECT_PROJECT_ID=49329618af3867dfc346d91a46d67669
+GATSBY_ROOFSTOCK_MEMBERSHIP_CONTRACT_ADDRESS=0x55a1B527433aF12CCff3a1d15EAA770c249055B2
