--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Upload
         uses: actions/upload-pages-artifact@v1
         with:
-          path: build
+          path: public
   DeployDevelopment:
     name: Deploy
     runs-on: ubuntu-latest
