--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
-/.pnp
+node_modules
+.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage
+
+# next.js
+.next
+out
 
 # production
-/build
+build
+dist
 
 # misc
 .DS_Store
@@ -22,4 +25,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# ide
 .idea
+
+# typescript
+next-env.d.ts
