--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write ."
   },
@@ -23,35 +23,13 @@
     "@web3modal/react": "^2.4.6",
     "dayjs": "^1.11.8",
     "lodash": "^4.17.21",
+    "next": "^13.4.6",
     "prettier": "2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
     "react-markdown": "^8.0.7",
-    "react-router-dom": "^6.11.2",
-    "react-scripts": "5.0.1",
-    "sass": "^1.62.1",
-    "typescript": "^4.9.5",
+    "typescript": "^5.1.3",
     "viem": "^1.0.7",
-    "wagmi": "^1.2.0",
-    "web-vitals": "^2.1.4"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "wagmi": "^1.2.0"
   }
 }
