--- a/package.json
+++ b/package.json
@@ -15,10 +15,6 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.13.3",
-    "@types/lodash": "^4.14.195",
-    "@types/node": "^16.18.34",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
     "@web3modal/ethereum": "^2.4.6",
     "@web3modal/react": "^2.4.6",
     "dayjs": "^1.11.8",
@@ -28,8 +24,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
-    "typescript": "^5.1.3",
     "viem": "^1.0.7",
     "wagmi": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^16.18.34",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
+    "typescript": "^5.1.3"
   }
 }
