--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.13.3",
     "@web3modal/ethereum": "^2.4.6",
     "@web3modal/react": "^2.4.6",
+    "alchemy-sdk": "^2.9.1",
     "dayjs": "^1.11.8",
     "lodash": "^4.17.21",
     "next": "^13.4.6",
