--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-NEXT_PUBLIC_HOME_ON_CHAIN_CONTRACT_ADDRESS=0xF928d6285B8a4f9ac5A640ae598D7399C331cea7
 NEXT_PUBLIC_MARKETPLACE_URL=https://marketplace.roofstockonchain.com
 NEXT_PUBLIC_FAQS_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain/faqs/buying
 NEXT_PUBLIC_HOW_IT_WORKS_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain/guides/how-it-works
 NEXT_PUBLIC_LEARN_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain
 NEXT_PUBLIC_RS_ON_CHAIN_TWITTER_URL=https://twitter.com/rsonchain
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=49329618af3867dfc346d91a46d67669
-NEXT_PUBLIC_ROOFSTOCK_MEMBERSHIP_CONTRACT_ADDRESS=0x55a1B527433aF12CCff3a1d15EAA770c249055B2
+NEXT_PUBLIC_QUADRATA_VERIFY_IDENTITY_LINK=https://quadrata.com/onboarding/roofstock
+NEXT_PUBLIC_ROOFSTOCK_ON_CHAIN_KYC_CONTRACT_ADDRESS=0x6A89e1ddFfbc184d5619fb38E3d8e72D28351e60
 ALCHEMY_API_KEY=WdMxgCLQikH2yAItPl0I55D_foNQ33k0
