--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.13.3",
+    "@types/numeral": "^2.0.2",
     "@web3modal/ethereum": "^2.4.6",
     "@web3modal/react": "^2.4.6",
     "alchemy-sdk": "^2.9.1",
     "dayjs": "^1.11.8",
     "lodash": "^4.17.21",
     "next": "^13.4.6",
+    "numeral": "^2.0.6",
     "prettier": "2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
