--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier:fix": "prettier --write ."
   },
   "dependencies": {
+    "@azure/openai": "^1.0.0-beta.5",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
@@ -23,7 +24,6 @@
     "lodash": "^4.17.21",
     "next": "^13.4.6",
     "numeral": "^2.0.6",
-    "openai": "^4.0.1",
     "prettier": "2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
