--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.13.3",
     "@types/numeral": "^2.0.2",
+    "@vercel/analytics": "^1.0.2",
     "@web3modal/ethereum": "^2.4.6",
     "@web3modal/react": "^2.4.6",
     "alchemy-sdk": "^2.9.1",
