--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "crons": [
     {
-      "path": "/api/cron",
+      "path": "/api/build-supply-search-index",
       "schedule": "0 12 * * *"
     }
   ]
