--- a/package.json
+++ b/package.json
@@ -17,19 +17,25 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.13.3",
+    "@types/mapbox-gl": "^2.7.14",
     "@types/numeral": "^2.0.2",
     "@vercel/analytics": "^1.0.2",
     "@web3modal/ethereum": "^2.4.6",
     "@web3modal/react": "^2.4.6",
     "alchemy-sdk": "^2.9.1",
     "dayjs": "^1.11.8",
+    "install": "^0.13.0",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^2.15.0",
     "next": "^13.4.6",
+    "npm": "^10.1.0",
     "numeral": "^2.0.6",
     "prettier": "2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.1.6",
     "react-markdown": "^8.0.7",
+    "react-type-animation": "^3.1.0",
     "viem": "^1.0.7",
     "wagmi": "^1.2.0"
   },
