Update the marketplace link to go to OpenSea

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_MARKETPLACE_URL=https://marketplace.roofstockonchain.com
+NEXT_PUBLIC_MARKETPLACE_URL=https://opensea.io/collection/roofstock-onchain-homes
 NEXT_PUBLIC_FAQS_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain/faqs/buying
 NEXT_PUBLIC_HOW_IT_WORKS_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain/guides/how-it-works
 NEXT_PUBLIC_LEARN_URL=https://roofstock-onchain.gitbook.io/learn-about-roofstock-onchain
